--- a/index.html
+++ b/index.html
@@ -6,10 +6,30 @@
     <title>TechWave</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-</head>
-<body>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 
-    <header>
+</head>
+<body class="font-inter">
+
+    <header class="bg-[#1A0B2E]">
+        <nav>
+            <div class="logo">
+                <h2 >Tech<span>Wave</span></h2>
+            </div>
+            <div class="list-item">
+                <ul>
+                    <li><a href="">About</a></li>
+                    <li><a href="">Episodes</a></li>
+                    <li><a href="">Host</a></li>
+                </ul>
+            </div>
+            <div class="sub-btn">
+                <button>Subscribe <i class="fa-solid fa-angle-right"></i></button>
+            </div>
+        </nav>
 
     </header>
 
