hero section done

--- a/index.html
+++ b/index.html
@@ -31,6 +31,20 @@
             </div>
         </nav>
 
+        <div class="banner">
+            
+                <button class="new-btn">New</button>
+                <img src="assets/hero-circle.png" alt="" class="mic-pic">
+                <img src="assets/microphone.png" alt="" class="mic-bg">
+                
+            <div class="titl">
+                <h2>TechWave</h2>
+                <p>Your daily dose of tech insights, productivity hacks, and personal growth</p>
+                <button class="titl-btn-1">Listen On Spotify</button>
+                <button class="titl-btn-2">Subscribe</button>
+            </div>
+        </div>
+
     </header>
 
     <main>
