card section done

--- a/index.html
+++ b/index.html
@@ -49,6 +49,65 @@
 
     <main>
 
+        <section class="podcast-sec">
+            <div class="about">
+                <h2>About The Podcast</h2>
+                <p>TechWave is your go-to podcast for staying ahead in the fast-paced world of technology.
+We break down complex topics into digestible insights, explore productivity strategies that actually work,
+and share stories of personal growth from industry leaders.
+<br>
+Join thousands of young professionals and tech enthusiasts who start their day with TechWave.</p>
+                
+            </div>
+            <div class="rating">
+                <div class="listener">
+                    <h2>150K</h2>
+                    <p>MONTHLY LISTENERS</p>
+                </div>
+                <div class="epsod">
+                    <h2>200+</h2>
+                    <p>EPISODES PUBLISHED</p>
+
+                </div>
+                <div class="average">
+                    <h2>4.9<i class="fa-solid fa-star"></i></h2>
+                    <p>AVERAGE RATING</p>
+                </div>
+                <div class="industry">
+                    <h2>50+</h2>
+                    <p>INDUSTRY EXPERTS</p>
+                </div>
+            </div>
+        </section>
+
+        <section class="choose-sction">
+            <div class="card-1">
+                <img src="assets/headphone.png" alt="">
+                <h3>Premium Audio Quality</h3>
+                <p>Experience crystal-clear sound with professional-grade recording equipment and expert audio engineering. Every episode is mastered for optimal listening across all devices and platforms.</p>
+            </div>
+            <div class="card-2">
+                <img src="assets/device.png" alt="">
+                <h3>Mobile Friendly</h3>
+                <p>Listen on the go with seamless mobile experience and offline downloads.</p>
+            </div>
+            <div class="card-3">
+                <img src="assets/location.png" alt="">
+                <h3>Global Community</h3>
+                <p>Connect with tech enthusiasts from over 120 countries worldwide.</p>
+            </div>
+            <div class="card-4">
+                <img src="assets/lightning-bolt.png" alt="" class="w-20">
+                <h3>Exclusive Interviews</h3>
+                <p>Get unprecedented access to industry titans, startup founders, and tech visionaries. Our host secures exclusive conversations you won't find anywhere else, diving deep into their journeys, failures, and success strategies.</p>
+            </div>
+            <div class="card-5">
+                <img src="assets/resource.png" alt="">
+                <h3>Rich Resources</h3>
+                <p>Access show notes, transcripts, and additional learning materials for every episode.</p>
+            </div>
+        </section>
+
     </main>
 
     <footer>
