host section done

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@ Join thousands of young professionals and tech enthusiasts who start their day w
                     <p>In This video i will show how to work fiber optical cable in cctv surveillance system.</p>
                 </div>
                 <div class="video-card">
-                    <iframe width="280" height="150" src="https://www.youtube.com/embed/Q4irhjQt7aM?si=h3xn23pMILs4wkbQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                    <iframe width="100%" height="150" src="https://www.youtube.com/embed/Q4irhjQt7aM?si=h3xn23pMILs4wkbQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                     <h3>IP Camera Installation Full Guide </h3>
                     <p>In This video i will show how to install and setup Hikvision ip camera and all information of cctv ip camera.</p>
                 </div>
@@ -125,6 +125,28 @@ Join thousands of young professionals and tech enthusiasts who start their day w
                     <iframe width="280" height="150" src="https://www.youtube.com/embed/vehJIUvjhPQ?si=HIzZmtZDS5B0s7Sh" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                     <h3>How to off colorvu Camera Flash Light</h3>
                     <p>In This video i will show how to off hikvision colorvu camera light . This is an important video for cctv installer and all of cctv users.</p>
+                </div>
+            </div>
+        </section>
+
+        <section class="host-section">
+            <h2 id="meet">Meet The Host</h2>
+            <div class="host-content">
+                <div class="host-pic">
+                    <img src="assets/host.png" alt="">
+                </div>
+                <div class="host-info">
+                    <h2 id="name">Alex Kumar</h2>
+                    <p>Tech entrepreneur, productivity expert, and lifelong learner. Alex has been in the tech industry for over 10 years, working with startups and Fortune 500 companies. Through TechWave, Alex shares insights from industry leaders and practical advice for anyone looking to grow in tech.</p>
+                    <div class="host-contact">
+                        <a href=""><img src="assets/linkedin.png" alt=""></a>
+
+                        <a href=""><img src="assets/x.png" alt=""></a>
+
+                        <a href=""><img src="assets/instagram.png" alt=""></a>
+
+                        <a href=""><img src="assets/youtube.png" alt=""></a>
+                    </div>
                 </div>
             </div>
         </section>
