--- a/index.html
+++ b/index.html
@@ -153,6 +153,30 @@ Join thousands of young professionals and tech enthusiasts who start their day w
     </main>
 
     <footer>
+        <div class="logo footer-logo">
+                <h2 class="text-center ">Tech<span>Wave</span></h2>
+        </div>
+        <div class="footer-link ">
+            <div class="spti-icon flex">
+                <img src="assets/spotify.png" alt="" class="spt-i">
+                <p>sortify</p>
+            </div>
+            <div class="appl-icon flex">
+                <img src="assets/apple-podcast.png" alt="" class="ap-i">
+                <p>Apple Products</p>
+            </div>
+            <div class="youtube-icon flex">
+                <img src="assets/youtube-podcast.png" alt="" class="yt-i">
+                <p>Youtube</p>
+            </div>
+            <div class="twitor-icon flex">
+                <img src="assets/twitter.png" alt="" class="twitor-icon">
+                <p class="">Twitter</p>
+            </div>
+        </div>
+        <div class="copy">
+            <p class="text-center ">&copy; 2026 TechWave Podcast.All rights reserved.</p>
+        </div>
 
     </footer>
 
