--- a/index.html
+++ b/index.html
@@ -115,16 +115,19 @@ Join thousands of young professionals and tech enthusiasts who start their day w
                     <iframe width="280" height="150" src="https://www.youtube.com/embed/nAitmY5RJyc?si=Zr2pBPGnQv2kjiJt" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                     <h3>Fiber Optical Cable How To Work In CCTV</h3>
                     <p>In This video i will show how to work fiber optical cable in cctv surveillance system.</p>
+                    <p id="time"><i class="fa-solid fa-clock"></i>18min</p>
                 </div>
                 <div class="video-card">
                     <iframe width="100%" height="150" src="https://www.youtube.com/embed/Q4irhjQt7aM?si=h3xn23pMILs4wkbQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                     <h3>IP Camera Installation Full Guide </h3>
                     <p>In This video i will show how to install and setup Hikvision ip camera and all information of cctv ip camera.</p>
+                    <p id="time"><i class="fa-solid fa-clock"></i>32min</p>
                 </div>
                 <div class="video-card">
                     <iframe width="280" height="150" src="https://www.youtube.com/embed/vehJIUvjhPQ?si=HIzZmtZDS5B0s7Sh" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                     <h3>How to off colorvu Camera Flash Light</h3>
                     <p>In This video i will show how to off hikvision colorvu camera light . This is an important video for cctv installer and all of cctv users.</p>
+                    <p id="time"><i class="fa-solid fa-clock"></i>20min</p>
                 </div>
             </div>
         </section>
